// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncButton should render in default state 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Test button
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`AsyncButton should render in pending: false, disabled: false state 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Test button
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`AsyncButton should render in pending: false, disabled: true state 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Test button
  </span>
</button>
`;

exports[`AsyncButton should render in pending: true, disabled: false state 1`] = `
.emotion-0 {
  position: absolute;
}

<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <div
      class="MuiCircularProgress-root emotion-0 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 24px; height: 24px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
    Test button
  </span>
</button>
`;

exports[`AsyncButton should render in pending: true, disabled: true state 1`] = `
.emotion-0 {
  position: absolute;
}

<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <div
      class="MuiCircularProgress-root emotion-0 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 24px; height: 24px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
    Test button
  </span>
</button>
`;
